# ndk-demo

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
Demo1/: build.gradle
Demo1/app/: build.gradle
Demo1/app/src/main/cpp/: native-lib.cpp
Demo1/app/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt
Demo1/src/main/: AndroidManifest.xml
Demo1/src/main/cpp/: native-lib.cpp
Demo1/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt
Demo1/src/main/res/layout/: activity_main.xml
Demo1/src/test/java/io/github/kongpf8848/ndk/demo/: ExampleUnitTest.kt
Demo10/src/androidTest/java/io/github/kongpf8848/ndk/demo/: ExampleInstrumentedTest.kt
Demo10/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Demo10/src/main/cpp/breakpad/: CMakeLists.txt  breakpad.cc
Demo10/src/main/cpp/breakpad/src/client/: minidump_file_writer.cc
Demo10/src/main/cpp/breakpad/src/client/ios/: exception_handler_no_mach.cc
Demo10/src/main/cpp/breakpad/src/client/linux/minidump_writer/: linux_dumper.cc
Demo10/src/main/cpp/breakpad/src/client/mac/handler/: dynamic_images.cc  exception_handler.cc  exception_handler.h  minidump_generator.cc
Demo10/src/main/cpp/breakpad/src/client/windows/crash_generation/: crash_generation_client.cc  crash_generation_server.cc
Demo10/src/main/cpp/breakpad/src/common/: memory_allocator.h  memory_allocator_unittest.cc  test_assembler.cc
Demo10/src/main/cpp/breakpad/src/common/dwarf/: bytereader.cc
Demo10/src/main/cpp/breakpad/src/common/linux/: elf_core_dump.cc
Demo10/src/main/cpp/breakpad/src/processor/: disassembler_x86.cc  disassembler_x86.h  disassembler_x86_unittest.cc  exploitability_win.cc
Demo10/src/main/cpp/breakpad/src/tools/linux/md2core/: minidump-2-core.cc
Demo10/src/main/cpp/breakpad/src/tools/mac/upload_system_symbols/: upload_system_symbols.go
Demo10/src/main/cpp/breakpad/src/tools/mac/upload_system_symbols/archive/: extract.go
Demo10/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt
Demo10/src/main/res/layout/: activity_main.xml
Demo10/src/main/res/values/: strings.xml
Demo2/app/src/main/: AndroidManifest.xml
Demo2/gradle/wrapper/: gradle-wrapper.properties
Demo2/src/main/cpp/: native-lib.cpp
Demo2/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt
Demo3/: settings.gradle
Demo3/app/src/main/cpp/: native-lib.cpp
Demo3/src/main/: AndroidManifest.xml
Demo3/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt
Demo4/: settings.gradle
Demo4/app/src/main/: AndroidManifest.xml
Demo4/app/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt
Demo4/src/main/cpp/: native-lib.cpp
Demo4/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt  Util.kt
Demo4/src/main/res/layout/: activity_main.xml
Demo4/src/main/res/values/: strings.xml
Demo5/: build.gradle  settings.gradle
Demo5/app/src/main/cpp/: native-lib.cpp
Demo5/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt
Demo5/src/main/res/values/: strings.xml
Demo6/: settings.gradle
Demo6/app/src/main/cpp/: native-lib.cpp
Demo6/app/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt  Util.kt
Demo6/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt
Demo6/src/main/res/values/: strings.xml
Demo7/: build.gradle  settings.gradle
Demo7/app/src/main/cpp/: native-lib.cpp
Demo7/app/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt
Demo7/app/src/main/res/values/: strings.xml
Demo7/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt  Util.kt
Demo7/src/main/res/layout/: activity_main.xml
Demo8/: build.gradle  settings.gradle
Demo8/app/: build.gradle
Demo8/app/src/main/: AndroidManifest.xml
Demo8/app/src/main/cpp/: CMakeLists.txt
Demo8/app/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt  MyApplication.kt  TgsActivity.kt
Demo8/app/src/main/java/io/github/kongpf8848/ndk/demo/adapter/: StickerAdapter.kt
Demo8/app/src/main/java/io/github/kongpf8848/ndk/demo/bean/: ImageBean.kt  StickerItem.kt
Demo8/app/src/main/java/io/github/kongpf8848/ndk/demo/utils/: EmojiUtils.kt
Demo8/app/src/main/java/io/github/kongpf8848/ndk/demo/view/: StickerEmojiCell.kt  TriangleView.kt
Demo8/app/src/main/java/org/telegram/messenger/: AndroidUtilities.java  DispatchQueuePool.java
Demo8/app/src/main/java/org/telegram/ui/Components/: RLottieDrawable.java  RLottieImageView.java
Demo8/app/src/main/res/layout/: activity_main.xml  item_emoji.xml
Demo8/app/src/main/res/values/: attrs.xml
Demo8/src/main/cpp/one/: one.cpp
Demo8/src/main/cpp/two/: CMakeLists.txt
Demo8/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt
Demo8/src/main/res/layout/: activity_main.xml
Demo8/src/main/res/values/: strings.xml
Demo9/: build.gradle
Demo9/app/src/main/cpp/: CMakeLists.txt
Demo9/app/src/main/cpp/one/: CMakeLists.txt
Demo9/app/src/main/cpp/two/: two.cpp
Demo9/app/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt
Demo9/app/src/main/res/layout/: activity_main.xml
Demo9/src/main/: AndroidManifest.xml
Demo9/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Demo9/src/main/java/io/github/kongpf8848/ndk/demo/: MainActivity.kt
Demo9/src/main/res/layout/: activity_main.xml
Demo9/src/main/res/values/: strings.xml
buildSrc/src/main/kotlin/: Dependencies.kt
gradle/wrapper/: gradle-wrapper.properties
